[project]
name = "gym-line-follower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.2.0",
    "imageio>=2.37.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "pybullet>=3.2.7",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "gym_line_follower/*",
]
